keyboard: pre-select input source from X Window or gnome-desktop

For keyboard layout, we pre-select it from X Window.
For other input source, we pre-select it from gnome-desktop.

https://bugzilla.gnome.org/show_bug.cgi?id=776189